--- a/package.json
+++ b/package.json
@@ -6,10 +6,26 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "chart.js": "^2.9.4",
+    "date-fns": "^2.16.1",
+    "firebase": "^7.23.0",
+    "framer-motion": "^2.9.1",
+    "leaflet": "^1.7.1",
+    "leaflet-routing-machine": "^3.2.12",
+    "lrm-google": "^1.0.1",
+    "material-ui": "^0.20.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "react-chartjs-2": "^2.11.1",
+    "react-leaflet": "^3.0.5",
+    "react-leaflet-routing-machine": "0.0.5",
+    "react-parallax": "^3.1.2",
+    "react-photo-gallery": "^8.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-swipeable-views": "^0.13.9",
+    "simple-react-footer": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
