--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
@@ -15,17 +17,17 @@
     "lrm-google": "^1.0.1",
     "material-ui": "^0.20.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
     "react-chartjs-2": "^2.11.1",
+    "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.5",
     "react-leaflet-routing-machine": "0.0.5",
     "react-parallax": "^3.1.2",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
     "react-swipeable-views": "^0.13.9",
-    "simple-react-footer": "^1.0.2"
+    "simple-react-footer": "^1.0.2",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
