--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "date-fns": "^2.16.1",
     "firebase": "^7.23.0",
     "framer-motion": "^2.9.1",
-    "leaflet": "^1.7.1",
+    "leaflet": "^1.4.0",
     "leaflet-routing-machine": "^3.2.12",
     "lrm-google": "^1.0.1",
     "material-ui": "^0.20.2",
@@ -20,8 +20,8 @@
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
-    "react-leaflet": "^3.0.5",
-    "react-leaflet-routing-machine": "0.0.5",
+    "react-google-font-loader": "^1.1.0",
+    "react-leaflet": "^2.2.1",
     "react-parallax": "^3.1.2",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
