--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-swipeable-views": "^0.13.9",
+    "react-vis": "^1.11.7",
     "simple-react-footer": "^1.0.2",
     "web-vitals": "^0.2.4"
   },
